--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ application {
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "buddiboi-fat"
     archiveClassifier = null
 }
 
